--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -7,4 +7,76 @@
     android:layout_height="match_parent"
     tools:context="com.mapuni.gdydcaiji.activity.CollectionActivity">
 
+    <com.esri.android.map.MapView
+        android:id="@+id/mapview_collect"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+      >
+
+    </com.esri.android.map.MapView>
+
+    <Button
+        android:id="@+id/poi_collect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#49878787"
+        android:text="POI"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <Button
+        android:id="@+id/newline_collect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#49878787"
+        android:text="楼宇采集"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toRightOf="@+id/poi_collect"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <Button
+        android:id="@+id/newploygon_collect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#49878787"
+        android:text="面采集"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toRightOf="@+id/newline_collect"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <ImageView
+        android:id="@+id/dingwei_collect"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/dingwei_icon_selector"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="14dp"
+        android:layout_marginBottom="50dp"
+        />
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/center_icon"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <Button
+        android:id="@+id/jiaotong_collect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#49878787"
+        android:text="村采集"
+        android:layout_marginTop="20dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="14dp"
+        app:layout_constraintTop_toBottomOf="@id/newploygon_collect"
+        />
 </android.support.constraint.ConstraintLayout>
