--- a/app/src/main/res/layout/activity_country.xml
+++ b/app/src/main/res/layout/activity_country.xml
@@ -25,36 +25,6 @@
                 android:orientation="vertical">
 
                 <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp">
-
-                    <TextView
-                        android:id="@+id/tv_big_class"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:text="分类"
-                        android:textColor="#515151"
-                        android:textSize="18sp"/>
-
-                    <Spinner
-                        android:id="@+id/spinner_big"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:layout_toRightOf="@id/tv_big_class"
-                        android:textSize="18sp"/>
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="1px"
-                        android:layout_alignParentBottom="true"
-                        android:background="#969696"/>
-                </RelativeLayout>
-
-                <RelativeLayout
                     android:id="@+id/rl_edit_container"
                     android:layout_width="match_parent"
                     android:layout_height="48dp">
@@ -86,56 +56,94 @@
                         android:layout_alignParentBottom="true"
                         android:background="#969696"/>
                 </RelativeLayout>
-
-                <LinearLayout
+                <RelativeLayout
+                    android:id="@+id/address_edit_container"
                     android:layout_width="match_parent"
-                    android:layout_height="64dp"
-                    android:layout_marginTop="8dp"
-                    android:orientation="horizontal">
+                    android:layout_height="48dp">
 
                     <TextView
-                        android:id="@+id/textview_item_saveinfo"
+                        android:id="@+id/tv_point_address"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
                         android:layout_marginLeft="16dp"
-                        android:gravity="center_vertical"
-                        android:text="照片"
+                        android:text="地址"
                         android:textColor="#515151"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"/>
 
-                    <LinearLayout
+                    <AutoCompleteTextView
+                        android:id="@+id/address_edit"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/tv_point_address"
+                        android:layout_alignBottom="@+id/tv_point_address"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:background="@null"
+                        android:textSize="18sp"/>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:layout_alignParentBottom="true"
+                        android:background="#969696"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_big_class"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
                         android:layout_marginLeft="16dp"
-                        android:orientation="horizontal">
+                        android:text="类型"
+                        android:textColor="#515151"
+                        android:textSize="18sp"/>
 
-                        <ImageView
-                            android:id="@+id/photo1_saveinfo"
-                            android:layout_width="64dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_vertical"
-                            android:background="@drawable/photo_icon_selector"
-                            android:scaleType="fitXY" />
+                    <Spinner
+                        android:id="@+id/spinner_big"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:layout_toRightOf="@id/tv_big_class"
+                        android:textSize="18sp"/>
 
-                        <ImageView
-                            android:id="@+id/photo2_saveinfo"
-                            android:layout_width="64dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_vertical"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/photo_icon_selector"
-                            android:visibility="gone" />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:layout_alignParentBottom="true"
+                        android:background="#969696"/>
+                </RelativeLayout>
 
-                        <ImageView
-                            android:id="@+id/photo3_saveinfo"
-                            android:layout_width="64dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_vertical"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/photo_icon_selector"
-                            android:visibility="gone" />
-                    </LinearLayout>
-                </LinearLayout>
+                <RelativeLayout
+                    android:id="@+id/country_edit_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_point_country"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:text="村庄边界 "
+                        android:textColor="#515151"
+                        android:textSize="18sp"/>
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#515151"
+                        android:textSize="18sp"
+                        android:text="地图采集"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="50dp"
+                        />
+                </RelativeLayout>
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="1px"
