--- a/app/src/main/res/layout/activity_new_poi.xml
+++ b/app/src/main/res/layout/activity_new_poi.xml
@@ -1,10 +1,410 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.mapuni.gdydcaiji.activity.NewPOIActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="com.mapuni.gdydcaiji.activity.NewPOIActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/titlebar" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/rl_root"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+                <RelativeLayout
+                    android:id="@+id/rl_edit_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_point_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:text="名称"
+                        android:textColor="#515151"
+                        android:textSize="18sp" />
+
+                    <AutoCompleteTextView
+                        android:id="@+id/name_edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:layout_toRightOf="@+id/tv_point_name"
+                        android:background="@null"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:layout_alignParentBottom="true"
+                        android:background="#969696" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_big_class"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:text="大类"
+                        android:textColor="#515151"
+                        android:textSize="18sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner_big"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:layout_toRightOf="@id/tv_big_class"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:layout_alignParentBottom="true"
+                        android:background="#969696" />
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/tv_medium_class"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="16dp"
+                            android:text="中类"
+                            android:textColor="#515151"
+                            android:textSize="18sp" />
+
+                        <Spinner
+                            android:id="@+id/spinner_normal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="16dp"
+                            android:layout_toRightOf="@+id/tv_medium_class"
+                            android:spinnerMode="dropdown"
+                            android:textSize="18sp" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="1px"
+                            android:layout_alignParentBottom="true"
+                            android:background="#969696" />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_small_class"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:text="小类"
+                        android:textColor="#515151"
+                        android:textSize="18sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner_little"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:layout_toRightOf="@id/tv_small_class"
+                        android:spinnerMode="dropdown"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:layout_alignParentBottom="true"
+                        android:background="#969696" />
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:id="@+id/rl_telephone"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_phone_number"
+                        style="@style/hintTextViewStyle"
+                        android:text="电话"/>
+
+                    <com.bigmap.mapuni.view.ClearEditText
+                        android:id="@+id/telephone_edit"
+                        style="@style/clearEditTextStyle"
+                        android:layout_toRightOf="@+id/tv_phone_number"/>
+
+                    <ImageView style="@style/lineImageViewStyle"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_point_address"
+                        style="@style/hintTextViewStyle"
+                        android:text="地址" />
+
+                    <com.bigmap.mapuni.view.ClearEditText
+                        android:id="@+id/address_edit"
+                        style="@style/clearEditTextStyle"
+                        android:layout_toRightOf="@+id/tv_point_address" />
+
+                    <ImageView style="@style/lineImageViewStyle" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_primary_point_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_primary_info"
+                        style="@style/hintTextViewStyle"
+                        android:text="主点信息" />
+
+                    <com.bigmap.mapuni.view.ClearEditText
+                        android:id="@+id/maininfo_edit"
+                        style="@style/clearEditTextStyle"
+                        android:layout_toRightOf="@id/tv_primary_info" />
+
+                    <ImageView style="@style/lineImageViewStyle" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_important_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/tv_important_info"
+                        style="@style/hintTextViewStyle"
+                        android:text="重要信息" />
+
+                    <com.bigmap.mapuni.view.ClearEditText
+                        android:id="@+id/importinfo_edit"
+                        style="@style/clearEditTextStyle"
+                        android:layout_toRightOf="@+id/tv_important_info" />
+
+                    <ImageView style="@style/lineImageViewStyle" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_room_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:orientation="horizontal">
+
+                        <RelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:id="@+id/tv_layer"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="16dp"
+                                android:text="层数"
+                                android:textColor="#515151"
+                                android:textSize="18sp" />
+
+                            <com.bigmap.mapuni.view.ClearEditText
+                                android:id="@+id/floornum_edit"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="16dp"
+                                android:layout_toRightOf="@+id/tv_layer"
+                                android:background="@null"
+                                android:paddingRight="8dp"
+                                android:textSize="18sp" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:id="@+id/tv_door"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="16dp"
+                                android:text="户数"
+                                android:textColor="#515151"
+                                android:textSize="18sp" />
+
+                            <com.bigmap.mapuni.view.ClearEditText
+                                android:id="@+id/doornum_edit"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="16dp"
+                                android:layout_toRightOf="@+id/tv_door"
+                                android:background="@null"
+                                android:paddingRight="8dp"
+                                android:textSize="18sp" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:id="@+id/tv_unit"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="16dp"
+                                android:text="单元数"
+                                android:textColor="#515151"
+                                android:textSize="18sp" />
+
+                            <com.bigmap.mapuni.view.ClearEditText
+                                android:id="@+id/unitnum_edit"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="16dp"
+                                android:layout_toRightOf="@+id/tv_unit"
+                                android:background="@null"
+                                android:paddingRight="8dp"
+                                android:textSize="18sp" />
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:layout_alignParentBottom="true"
+                        android:background="#969696" />
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textview_item_saveinfo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="16dp"
+                        android:gravity="center_vertical"
+                        android:text="照片"
+                        android:textColor="#515151"
+                        android:textSize="18sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="16dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/photo1_saveinfo"
+                            android:layout_width="64dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:background="@drawable/photo_icon_selector"
+                            android:scaleType="fitXY" />
+
+                        <ImageView
+                            android:id="@+id/photo2_saveinfo"
+                            android:layout_width="64dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/photo_icon_selector"
+                            android:visibility="gone" />
+
+                        <ImageView
+                            android:id="@+id/photo3_saveinfo"
+                            android:layout_width="64dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/photo_icon_selector"
+                            android:visibility="gone" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="8dp"
+                    android:background="#969696" />
+
+                <Button
+                    android:id="@+id/delete_save_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_margin="16dp"
+                    android:background="@drawable/selector_btn_confirm"
+                    android:gravity="center"
+                    android:text="删  除"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
+</LinearLayout>
