--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,33 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <!-- 提示TextView样式 -->
+    <style name="hintTextViewStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:textColor">#515151</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <!-- 线样式 -->
+    <style name="lineImageViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1px</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:background">#969696</item>
+    </style>
+
+    <!-- 可清除EditText样式 -->
+    <style name="clearEditTextStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
