--- a/app/src/main/res/layout/activity_ploygon_info.xml
+++ b/app/src/main/res/layout/activity_ploygon_info.xml
@@ -1,9 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context="com.mapuni.gdydcaiji.activity.CountryActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include layout="@layout/titlebar" />
 
