--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/title_height"
-                android:background="@color/colorPrimary"
-                android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/title_height"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@id/back"
         android:layout_width="48dp"
         android:layout_height="match_parent"
         android:padding="14dp"
-        android:src="@drawable/selector_back"/>
+        android:src="@drawable/selector_back" />
 
     <TextView
         android:id="@id/title"
@@ -23,6 +23,21 @@
         android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="18sp"
-        tools:text="标题"/>
-    
+        tools:text="标题" />
+
+    <TextView
+        android:id="@id/edit"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:maxLength="10"
+        android:maxLines="1"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="编辑"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:visibility="gone" />
+
 </RelativeLayout>
