--- a/app/src/main/res/layout/activity_social_detail.xml
+++ b/app/src/main/res/layout/activity_social_detail.xml
@@ -106,7 +106,7 @@
                         android:text="联系电话" />
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_sslymc"
+                        android:id="@+id/et_lxdh"
                         style="@style/CollectEditText"
                         android:inputType="phone"/>
 
