--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -79,16 +79,16 @@
         app:layout_constraintTop_toBottomOf="@+id/newploygon_collect"
         android:layout_marginTop="10dp"
         />
-    <Button
+    <ImageView
         android:id="@+id/tianjia_collect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="#49878787"
-        android:text="填加点"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="14dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/dingdian_icon_selector"
         />
     <LinearLayout
         android:id="@+id/linear_tools_collect"
