添加范围选择

--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -144,4 +144,15 @@
         android:layout_marginBottom="10dp"
         />
 
+    <SeekBar
+        android:id="@+id/seek_collect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="14dp"
+        android:layout_marginLeft="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/selectpoint_collect"
+        android:layout_marginBottom="10dp"
+        android:max="200"
+        android:min="10"
+        />
 </android.support.constraint.ConstraintLayout>
