--- a/app/src/main/res/layout/dialog_showgraphicinfo.xml
+++ b/app/src/main/res/layout/dialog_showgraphicinfo.xml
@@ -2,10 +2,13 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_dialog"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
     </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
