--- a/app/src/main/res/layout/item_list_showgraphicinfo.xml
+++ b/app/src/main/res/layout/item_list_showgraphicinfo.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#0e0e0e"
+        />
     <TextView
         android:id="@+id/name_item_showgraphic"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:textSize="20sp"
+        android:textColor="#2e2e2e"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"
         />
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
