--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -14,6 +14,7 @@
     </com.esri.android.map.MapView>
 
     <LinearLayout
+        android:id="@+id/linear_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -25,43 +26,62 @@
 
         <Button
             android:id="@+id/poi_collect"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_back_selector"
             android:text="POI"
-
+            android:textColor="@color/white"
             />
 
         <Button
             android:id="@+id/louyu_collect"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
 
             android:background="@drawable/btn_back_selector"
             android:text="楼宇采集"
+            android:textColor="@color/white"
 
             />
 
         <Button
             android:id="@+id/newploygon_collect"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
 
             android:background="@drawable/btn_back_selector"
+            android:textColor="@color/white"
+
             android:text="面采集" />
 
         <Button
             android:id="@+id/jiaotong_collect"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
 
             android:background="@drawable/btn_back_selector"
+            android:textColor="@color/white"
+
             android:text="村采集"
 
             />
+        <Button
+            android:id="@+id/selectpoint_collect"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_back_selector"
+            android:textColor="@color/white"
+            android:text="范围选择"
+           />
     </LinearLayout>
 
     <ImageView
@@ -108,7 +128,7 @@
             android:id="@+id/baocun_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#49878787"
+            android:background="#878787"
             android:text="保存"
 
             />
@@ -118,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
-            android:background="#49878787"
+            android:background="#878787"
             android:text="后退"
 
             />
@@ -128,20 +148,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
-            android:background="#49878787"
+            android:background="#878787"
             android:text="取消" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/selectpoint_collect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/btn_back_selector"
-        android:text="范围选择"
-        app:layout_constraintBottom_toTopOf="@+id/linear_tools_collect"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+
 
     <Button
         android:id="@+id/btn_menu"
@@ -160,9 +171,9 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="14dp"
         android:layout_marginLeft="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/selectpoint_collect"
-        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/linear_button"
+        android:layout_marginTop="10dp"
         android:max="200"
-        android:min="10"
+        android:min="20"
         />
 </android.support.constraint.ConstraintLayout>
