--- a/app/src/main/res/layout/activity_village_detail.xml
+++ b/app/src/main/res/layout/activity_village_detail.xml
@@ -64,6 +64,16 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_bjcaiji"
+                    style="@style/HorizontalLinearLayout">
+
+                    <TextView
+                        style="@style/HintText"
+                        android:text="自然村边界采集" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="96dp"
                     android:orientation="horizontal">
@@ -76,7 +86,8 @@
                         android:id="@+id/iv_image"
                         android:layout_width="0dp"
                         android:layout_height="96dp"
-                        android:layout_weight="7" />
+                        android:layout_weight="7"
+                        android:src="@drawable/selector_camera" />
 
                 </LinearLayout>
 
