--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,78 +11,66 @@
         android:id="@+id/mapview_collect"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </com.esri.android.map.MapView>
 
     <LinearLayout
         android:id="@+id/linear_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
+        android:padding="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/poi_collect"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@drawable/btn_back_selector"
             android:text="POI"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/louyu_collect"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_back_selector"
             android:text="楼宇采集"
-            android:textColor="@color/white"
-
-            />
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/newploygon_collect"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_back_selector"
-            android:textColor="@color/white"
-
-            android:text="面采集" />
+            android:text="面采集"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/jiaotong_collect"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_back_selector"
-            android:textColor="@color/white"
-
             android:text="村采集"
+            android:textColor="@color/white"/>
 
-            />
         <Button
             android:id="@+id/selectpoint_collect"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_back_selector"
-            android:textColor="@color/white"
             android:text="范围选择"
-           />
+            android:textColor="@color/white"/>
     </LinearLayout>
 
     <ImageView
@@ -92,16 +81,16 @@
         android:layout_marginLeft="14dp"
         android:src="@drawable/dingwei_icon_selector"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/center_icon"
+        android:src="@drawable/center_icon2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <ImageView
@@ -109,11 +98,10 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginRight="14dp"
-        android:background="#49878787"
         android:src="@drawable/dingdian_icon_selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:id="@+id/linear_tools_collect"
@@ -129,9 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#878787"
-            android:text="保存"
-
-            />
+            android:text="保存"/>
 
         <Button
             android:id="@+id/houtui_collect"
@@ -139,9 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
             android:background="#878787"
-            android:text="后退"
-
-            />
+            android:text="后退"/>
 
         <Button
             android:id="@+id/chanel_collect"
@@ -149,9 +133,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
             android:background="#878787"
-            android:text="取消" />
+            android:text="取消"/>
     </LinearLayout>
-
 
 
     <Button
@@ -162,18 +145,19 @@
         android:layout_marginRight="10dp"
         android:background="@drawable/btn_back_selector"
         android:text="菜单"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/linear_tools_collect"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <SeekBar
         android:id="@+id/seek_collect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="14dp"
         android:layout_marginLeft="14dp"
-        app:layout_constraintTop_toBottomOf="@+id/linear_button"
+        android:layout_marginRight="14dp"
         android:layout_marginTop="10dp"
         android:max="200"
         android:min="20"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/linear_button"/>
+
 </android.support.constraint.ConstraintLayout>
