--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,102 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/login_bg"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/login_bg">
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginTop="144dp"
-        android:background="@color/white"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="@color/white"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <ImageView
+                android:id="@+id/iv_username"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="32dp"
+                android:src="@drawable/icon_admin"/>
+
+            <EditText
+                android:id="@+id/et_username"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@+id/iv_username"
+                android:background="@null"
+                android:gravity="center"
+                android:hint="请输入用户名"
+                android:textColorHint="@color/hintTextColor"/>
+
+
+        </RelativeLayout>
 
         <ImageView
-
-            android:id="@+id/iv_username"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="32dp"
-            android:src="@drawable/icon_admin" />
-
-        <EditText
-            android:id="@+id/et_username"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/iv_username"
-            android:background="@null"
-            android:gravity="center"
-            android:hint="请输入用户名"
-            android:textColorHint="@color/hintTextColor" />
+            android:layout_height="1dp"
 
+            android:background="@color/hintTextColor"/>
 
-    </RelativeLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-
-        android:background="@color/hintTextColor" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/white">
-
-        <ImageView
-
-            android:id="@+id/iv_password"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="32dp"
-            android:src="@drawable/icon_mima" />
-
-        <EditText
-            android:id="@+id/et_password"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/iv_password"
-            android:background="@null"
-            android:gravity="center"
-            android:hint="请输入密码"
-            android:inputType="textPassword"
-            android:textColorHint="@color/hintTextColor" />
+            android:layout_height="56dp"
+            android:background="@color/white">
 
-    </RelativeLayout>
+            <ImageView
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp">
+                android:id="@+id/iv_password"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="32dp"
+                android:src="@drawable/icon_mima"/>
+
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@+id/iv_password"
+                android:background="@null"
+                android:gravity="center"
+                android:hint="请输入密码"
+                android:inputType="textPassword"
+                android:textColorHint="@color/hintTextColor"/>
+
+        </RelativeLayout>
+
 
         <CheckBox
             android:id="@+id/cb_remember"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_margin="8dp"
             android:layout_marginLeft="16dp"
             android:text="记住密码"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"/>
 
 
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:text="登 录"
             android:background="@drawable/selector_login_btn"
+            android:text="登 录"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
+    </LinearLayout>
 
-    </RelativeLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
