--- a/app/src/main/res/layout/activity_poi_detail.xml
+++ b/app/src/main/res/layout/activity_poi_detail.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white"
+              android:focusable="true"
+              android:focusableInTouchMode="true"
+              android:orientation="vertical">
 
-    <include layout="@layout/layout_title" />
+    <include layout="@layout/layout_title"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,23 +31,23 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="POI名称" />
+                        android:text="POI名称"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_poiName"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
-                
+
                 <LinearLayout style="@style/HorizontalLinearLayout">
 
                     <TextView
                         style="@style/HintText"
-                        android:text="第四级" />
+                        android:text="第四级"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_forthAd"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -55,11 +55,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="第五级" />
+                        android:text="第五级"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_fifAd"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -67,11 +67,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="第六级" />
+                        android:text="第六级"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_sixAd"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -79,11 +79,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="第七级" />
+                        android:text="第七级"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_sevenAd"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -91,11 +91,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="分类" />
+                        android:text="分类"/>
 
                     <Spinner
                         android:id="@+id/sp_fl"
-                        style="@style/CustomSpinner" />
+                        style="@style/CustomSpinner"/>
 
                 </LinearLayout>
 
@@ -103,11 +103,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="美景等级" />
+                        android:text="美景等级"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_mjdj"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -115,11 +115,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="所属楼宇名称" />
+                        android:text="所属楼宇名称"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_sslymc"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -130,14 +130,20 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="图片" />
+                        android:text="图片"/>
 
-                    <ImageView
-                        android:id="@+id/iv_image"
+                    <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="96dp"
-                        android:layout_weight="7"
-                        android:src="@drawable/selector_camera"/>
+                        android:layout_weight="7">
+
+                        <ImageView
+                            android:id="@+id/iv_image"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/selector_camera"/>
+                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -149,7 +155,7 @@
                     android:layout_margin="16dp"
                     android:background="@drawable/selector_login_btn"
                     android:text="保存"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"/>
 
             </android.support.v7.widget.LinearLayoutCompat>
 
@@ -158,7 +164,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
-                android:clickable="true" />
+                android:clickable="true"/>
 
         </RelativeLayout>
     </ScrollView>
