--- a/app/src/main/res/layout/activity_village_detail.xml
+++ b/app/src/main/res/layout/activity_village_detail.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white"
+              android:focusable="true"
+              android:focusableInTouchMode="true"
+              android:orientation="vertical">
 
-    <include layout="@layout/layout_title" />
+    <include layout="@layout/layout_title"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,11 +31,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="名称" />
+                        android:text="名称"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_Name"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -43,11 +43,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="地址" />
+                        android:text="地址"/>
 
                     <com.mapuni.gdydcaiji.view.ClearEditText
                         android:id="@+id/et_address"
-                        style="@style/CollectEditText" />
+                        style="@style/CollectEditText"/>
 
                 </LinearLayout>
 
@@ -55,11 +55,11 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="分类" />
+                        android:text="分类"/>
 
                     <Spinner
                         android:id="@+id/sp_fl"
-                        style="@style/CustomSpinner" />
+                        style="@style/CustomSpinner"/>
 
                 </LinearLayout>
 
@@ -69,9 +69,10 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="自然村边界采集" />
+                        android:text="自然村边界采集"/>
 
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -80,14 +81,20 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="图片" />
+                        android:text="图片"/>
 
-                    <ImageView
-                        android:id="@+id/iv_image"
+                    <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="96dp"
-                        android:layout_weight="7"
-                        android:src="@drawable/selector_camera" />
+                        android:layout_weight="7">
+
+                        <ImageView
+                            android:id="@+id/iv_image"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/selector_camera"/>
+                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -99,7 +106,7 @@
                     android:layout_margin="16dp"
                     android:background="@drawable/selector_login_btn"
                     android:text="保存"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"/>
 
             </android.support.v7.widget.LinearLayoutCompat>
 
@@ -108,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
-                android:clickable="true" />
+                android:clickable="true"/>
 
         </RelativeLayout>
     </ScrollView>
