--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/title_height"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/title_height"
+                android:background="@color/loginNormal"
+                android:orientation="vertical">
 
     <ImageView
         android:id="@id/back"
         android:layout_width="48dp"
         android:layout_height="match_parent"
         android:padding="14dp"
-        android:src="@drawable/selector_back" />
+        android:src="@drawable/selector_back"/>
 
     <TextView
         android:id="@id/title"
@@ -23,7 +23,7 @@
         android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="18sp"
-        tools:text="标题" />
+        tools:text="标题"/>
 
     <TextView
         android:id="@id/edit"
@@ -38,6 +38,6 @@
         android:text="编辑"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </RelativeLayout>
