添加边界采集状态TextView -Jinlq

--- a/app/src/main/res/layout/activity_village_detail.xml
+++ b/app/src/main/res/layout/activity_village_detail.xml
@@ -69,10 +69,15 @@
 
                     <TextView
                         style="@style/HintText"
-                        android:text="自然村边界采集"/>
+                        android:text="边界"/>
+
+                    <TextView
+                        android:id="@+id/tv_collect_status"
+                        style="@style/HintText"
+                        android:layout_weight="7"
+                        android:text="未采集"/>
 
                 </LinearLayout>
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
