--- a/app/src/main/res/layout/dialog_bz.xml
+++ b/app/src/main/res/layout/dialog_bz.xml
@@ -4,12 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="附近要素的名称"
+        android:text="标注设置"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -20,7 +19,7 @@
         android:background="#0e0e0e"
         />
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_dialog"
+        android:id="@+id/recycler_dialog_bz"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
