--- a/app/src/main/res/layout/activity_building_detail.xml
+++ b/app/src/main/res/layout/activity_building_detail.xml
@@ -14,184 +14,192 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+
+        <android.support.v7.widget.LinearLayoutCompat
+            android:id="@+id/ll_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:divider="@drawable/shape_divider"
+            app:showDividers="middle">
 
+            <LinearLayout style="@style/HorizontalLinearLayout">
 
-            <android.support.v7.widget.LinearLayoutCompat
-                android:id="@+id/ll_container"
+                <TextView
+                    style="@style/HintText"
+                    android:text="楼宇类型" />
+
+                <Spinner
+                    android:id="@+id/sp_lyType"
+                    style="@style/CustomSpinner" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="楼宇性质" />
+
+                <Spinner
+                    android:id="@+id/sp_lyxz"
+                    style="@style/CustomSpinner" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="楼宇分类" />
+
+                <Spinner
+                    android:id="@+id/sp_lyfl"
+                    style="@style/CustomSpinner" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="楼宇名称" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_lyName"
+                    style="@style/CollectEditText" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="第四级" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_forthAd"
+                    style="@style/CollectEditText" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="第五级" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_fifAd"
+                    style="@style/CollectEditText" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="第六级" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_sixAd"
+                    style="@style/CollectEditText" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="电话" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_tele"
+                    style="@style/CollectEditText" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="楼宇层数" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_lycs"
+                    style="@style/CollectEditText" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/HorizontalLinearLayout">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="楼宇住户数" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_lyzhs"
+                    style="@style/CollectEditText"
+                    android:layout_weight="6" />
+
+                <ImageView
+                    android:id="@+id/iv_calculator"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_calculator" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:divider="@drawable/shape_divider"
-                app:showDividers="middle">
+                android:layout_height="96dp"
+                android:orientation="horizontal">
 
-                <LinearLayout style="@style/HorizontalLinearLayout">
+                <TextView
+                    style="@style/HintText"
+                    android:text="图片" />
 
-                    <TextView
-                        style="@style/HintText"
-                        android:text="楼宇类型" />
-
-                    <Spinner
-                        android:id="@+id/sp_lyType"
-                        style="@style/CustomSpinner" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="楼宇性质" />
-
-                    <Spinner
-                        android:id="@+id/sp_lyxz"
-                        style="@style/CustomSpinner" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="楼宇分类" />
-
-                    <Spinner
-                        android:id="@+id/sp_lyfl"
-                        style="@style/CustomSpinner" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="楼宇名称" />
-
-                    <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_lyName"
-                        style="@style/CollectEditText" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="第四级" />
-
-                    <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_forthAd"
-                        style="@style/CollectEditText" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="第五级" />
-
-                    <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_fifAd"
-                        style="@style/CollectEditText" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="第六级" />
-
-                    <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_sixAd"
-                        style="@style/CollectEditText" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="电话" />
-
-                    <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_tele"
-                        style="@style/CollectEditText" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="楼宇层数" />
-
-                    <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_lycs"
-                        style="@style/CollectEditText" />
-
-                </LinearLayout>
-
-                <LinearLayout style="@style/HorizontalLinearLayout">
-
-                    <TextView
-                        style="@style/HintText"
-                        android:text="楼宇住户数" />
-
-                    <com.mapuni.gdydcaiji.view.ClearEditText
-                        android:id="@+id/et_lyzhs"
-                        style="@style/CollectEditText" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <RelativeLayout
+                    android:layout_width="0dp"
                     android:layout_height="96dp"
-                    android:orientation="horizontal">
+                    android:layout_weight="7">
 
-                    <TextView
-                        style="@style/HintText"
-                        android:text="图片" />
+                    <ImageView
+                        android:id="@+id/iv_image"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/selector_camera" />
 
-                    <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="96dp"
-                        android:layout_weight="7">
+                </RelativeLayout>
 
-                        <ImageView
-                            android:id="@+id/iv_image"
-                            android:layout_width="64dp"
-                            android:layout_height="64dp"
-                            android:layout_centerInParent="true"
-                            android:src="@drawable/selector_camera" />
+            </LinearLayout>
 
-                    </RelativeLayout>
-
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/btn_save"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_margin="16dp"
-                    android:background="@drawable/selector_login_btn"
-                    android:text="保存"
-                    android:textColor="@color/white" />
-
-            </android.support.v7.widget.LinearLayoutCompat>
-
-            <View
-                android:id="@+id/cover"
+            <Button
+                android:id="@+id/btn_save"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:clickable="true" />
+                android:layout_height="48dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/selector_login_btn"
+                android:text="保存"
+                android:textColor="@color/white" />
 
-        </RelativeLayout>
+        </android.support.v7.widget.LinearLayoutCompat>
+
+        <!--<View-->
+        <!--android:id="@+id/cover"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:clickable="true" />-->
+
+        <!--</RelativeLayout>-->
     </ScrollView>
 
 </LinearLayout>
